# hydromodel

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CONFIGURATION_REFACTORING_SUMMARY.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  README_data_augment.md  README_data_postprocessing.md  README_zh.md  calibrate.py  calibration.py  core.py  data_process.py  definitions.py  env-dev.yml  environment-dev.yml  environment.yml  index.html  mkdocs.yml  objects.inv  param_range.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_docs.txt  run_hydromodel.py  setup.cfg  setup.py  sitemap.xml  test.py  test_config.py  test_minimal.py  test_simulate.py  (+6 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  (+8 more)
changelog/: index.html
common/: index.html
conf/: config.yaml
configs/: camels_xaj_config.yaml  example_config.yaml  example_config_selfmade.yaml  example_simulate_config.yaml  example_xaj_params.yaml  simulate_categorized_uh_example.yaml  simulate_unit_hydrograph_example.yaml  simulate_xaj_example.yaml  test_selfmade_config.yaml  xaj_example.yaml
contributing/: index.html
data/: dhf_data.json  example_day_rain_evapor.txt  example_flood.txt  lag_3_data.json  sms_3_data.json  xaj_data.json  xaj_java_data.csv
data_guide/: index.html
doc/: Home.md  实测径流分析.md  数据处理.md  模型参数率定.md  模型核心算法.md
docs/: Makefile  changelog.md  common.md  conf.py  config_structure_refactor_summary.md  contributing.md  data_guide.md  final_single_parameter_interface.md  hydromodel.md  index.md  index.rst  installation.md  installation.rst  make.bat  quickstart.md  selfmade_data_guide.md  simulation_guide.md  three_config_interface_design.md  unified_data_interface_refactor.md  usage.md  usage.rst
example/: USGS_02430680_combined.csv  sample.csv  sims.csv
examples/: simple_calibration_example.py  unified_calibration_example.py
faq/: index.html
hydromodel/: __init__.py  cli.py  index.html
input/: ModelwithsameParas.json  param_range.yaml  params.json  topo.txt
installation/: index.html
notebooks/: UH.ipynb  UH_0630.ipynb  UH_0704.ipynb  UH_shared.ipynb  plot0703.ipynb  show_results.ipynb  three.ipynb
quickstart/: index.html
scripts/: 1prepare_data.py  2calibrate_semi_xaj.py  3evaluate_xaj.py  calibrate_gr.py  calibrate_gr1a.py  calibrate_gr2m.py  calibrate_gr3j.py  calibrate_gr4j.py  calibrate_gr5j.py  calibrate_gr6j.py  calibrate_xaj.py  calibrate_xaj_camels.py  calibrate_xaj_for_multicases.py  check_data_format.py  datapostprocess4calibrate.py  datapreprocess4calibrate.py  dhf_java_comparison.py  dockerfile  evaluate_gr.py  evaluate_gr1a.py  evaluate_gr2m.py  evaluate_gr3j.py  evaluate_gr4j.py  evaluate_gr5j.py  evaluate_gr6j.py  evaluate_xaj.py  post_process.py  prepare_data.py  preprocess.py  run_calibration_with_config.py  run_categorized_uh_optimization.py  run_categorized_uh_with_config.py  run_data_augmentation.py  run_data_postprocessing.py  run_dhf_simulation.py  run_dpl4xaj.py  run_event_calibration.py  run_shared_uh_optimization.py  run_three_class_uh_optimization.py  run_unified_calibration.py  (+9 more)
search/: search_index.json
src/: calibrate.py  core.py
test/: __init__.py  conftest.py  picture.py  runxaj.yaml  test-xaj-bmi.py  test.py  test_calibrate.py  test_categorized_uh_config.yaml  test_categorized_unit_hydrograph.py  test_config_manager.py  test_data.py  test_data_camels_us.py  test_data_postprocess.py  test_data_preprocess.py  test_data_visualize.py  test_dhf.py  test_dpl4xaj.py  test_evaluate.py  test_gen_topo.py  test_gr1a.py  test_gr2m.py  test_gr3j.py  test_gr4j.py  test_gr6j.py  test_gr_model.py  test_hydromodel.py  test_hymod.py  test_jax4gr4j.py  test_jax4xaj.py  test_point_stations_polygons.py  test_rr_event_iden.py  test_selfmade_dataset.py  test_session_division.py  test_show_results.py  test_system_integration.py  test_unified_all.py  test_unified_calibration.py  test_unified_xaj.py  test_unit_hydrograph.py  test_usage_examples.py  (+4 more)
usage/: index.html
xaj/: calibrate_ga_xaj_bmi.py  calibrate_sceua_xaj_bmi.py  configuration.py  constant_unit.py  params.py  runxaj.yaml  xaj_bmi.py  xajmodel.py
(+197 files in other folders)
